<resources>
    <string name="app_name">Take Home</string>
    <string name="search_hint">Enter a github user id</string>
    <string name="search">Search</string>
    <string name="last_updated">Last Updated</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="enter_user_id">Please enter a user id</string>
</resources>